<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.veriqus.savoirvivre.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/app_name_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:text="@string/app_name" />


                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_launcher"
                    android:layout_centerInParent="true"
                    android:layout_toStartOf="@id/app_name_settings"
                    />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_toEndOf="@id/app_name_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:text="@string/version" />


            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_contact"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/envelope"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/envelope"/>

                        <TextView
                            android:id="@+id/contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/envelope"
                            android:text="@string/contact" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_suggestions"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/pencil"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/pencil"/>

                        <TextView
                            android:id="@+id/suggestions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/pencil"
                            android:text="@string/suggestions" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_developer"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/devicon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/veriqus"/>

                        <TextView
                            android:id="@+id/developer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/devicon"
                            android:text="@string/developer" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_fb"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/facebook_icon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/facebook"/>

                        <TextView
                            android:id="@+id/facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/facebook_icon"
                            android:text="@string/facebook" />

                    </RelativeLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_otherapps"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/otherappicon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/googleplay"/>

                        <TextView
                            android:id="@+id/other"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/otherappicon"
                            android:text="@string/other_apps" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#EEEEEE"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/rel_share"
                        android:foreground="?android:attr/selectableItemBackground">

                        <ImageView
                            android:id="@+id/shareicon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_alignParentStart="true"
                            android:layout_marginStart="20dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/share"/>

                        <TextView
                            android:id="@+id/share"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="20dp"
                            android:textSize="16sp"
                            android:layout_centerInParent="true"
                            android:layout_toEndOf="@id/shareicon"
                            android:text="@string/share" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RelativeLayout
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rel_credits"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/creditsicon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/info"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:textSize="16sp"
                        android:id="@+id/credits"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/creditsicon"
                        android:text="@string/credits" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
